--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
   },
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.13",
+    "@material-ui/icons": "^4.9.1",
     "document-register-element": "1.13.1",
+    "express": "4.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "express": "4.17.1"
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@nrwl/workspace": "9.2.3",
